<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.todo</groupId>
	<artifactId>todo_back</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>todo_back</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<sonar.organization>ma3ytuk-1</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<dependencies>

	<dependency>
		<groupId>com.h2database</groupId>
		<artifactId>h2</artifactId>
		<scope>runtime</scope>
	</dependency>

 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-validation</artifactId>
 		<version>3.3.5</version>
 	</dependency>


 	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
 		<version>42.7.4</version>
 	</dependency>


	<dependency>
		<groupId>org.springframework.restdocs</groupId>
		<artifactId>spring-restdocs-mockmvc</artifactId>
		<version>3.0.3</version>
	</dependency>


	<dependency>
		<groupId>org.asciidoctor</groupId>
		<artifactId>asciidoctorj</artifactId>
		<version>3.0.0</version>
	</dependency>


	<dependency>
		<groupId>org.mockito</groupId>
		<artifactId>mockito-core</artifactId>
		<scope>test</scope>
	</dependency>


 	<dependency>
 		<groupId>jakarta.validation</groupId>
 		<artifactId>jakarta.validation-api</artifactId>
 		<version>3.1.0</version>
 	</dependency>


 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		<version>3.3.5</version>
 	</dependency>


 	<dependency>
 		<groupId>com.nimbusds</groupId>
 		<artifactId>nimbus-jose-jwt</artifactId>
 		<version>9.47</version>
 	</dependency>


 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-oauth2-resource-server</artifactId>
 		<version>6.3.4</version>
 	</dependency>


 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-oauth2-jose</artifactId>
 		<version>6.3.4</version>
 	</dependency>


 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-jdbc</artifactId>
 		<version>6.2.0</version>
 	</dependency>


 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-dbcp2</artifactId>
 		<version>2.12.0</version>
 	</dependency>


 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-config</artifactId>
 		<version>6.3.4</version>
 	</dependency>

 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-web</artifactId>
 		<version>6.3.4</version>
 	</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
 </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.asciidoctor</groupId>
				<artifactId>asciidoctor-maven-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>generate-docs</id>
						<phase>package</phase>
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<configuration>
							<backend>html</backend>
							<sourceDirectory>src/docs/asciidoc</sourceDirectory>
							<outputDirectory>${project.build.directory}/docs</outputDirectory>
							<attributes>
								<snippets>${project.build.directory}/generated-snippets</snippets>
							</attributes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>